test/zmod8_2.slq

def main(){
	n:=3,N:=5;
	x:=5:uint[n];
	x:=x coerce в„¤mod[N] pun в„¤star[N]; /// error
	x:=x coerce uint[n];
	return x as рќ”№^n coerce рќ”№^3 as uint[_];
}
